# yt-scraping

./: .gitignore  README.md  package.json  pyproject.toml  thumbnail_test.py  youtube_channel_scraper.py  youtube_transcript_backfill.py  youtube_transcript_fetcher.py
.github/workflows/: youtube-scraper.yml
bots/: topic_cluster.txt
public/dashboard/: README.md  index.html  package-lock.json  vite.config.ts
public/dashboard/src/app/: routes.tsx
public/dashboard/src/app/components/: GlobalFilterBar.tsx  Root.tsx
public/dashboard/src/styles/: theme.css
src/yt_insights/: __init__.py  ai_usage.py  cli.py  config.py  constants.py  dashboard_api.py  dashboard_dev.py  exceptions.py  logging.py  models.py  transcript_backfill_cli.py  transcript_cli.py
src/yt_insights/analytics/: performance.py  thumbnail_features.py  title_features.py  transcript_features.py
src/yt_insights/bots/: __init__.py  topic_cluster.txt
src/yt_insights/clients/: http.py  supabase.py  youtube.py
src/yt_insights/repositories/: dashboard.py  supabase.py
src/yt_insights/services/: scraper.py  topic_clustering.py  transcript_backfill.py
src/yt_insights/tools/: __init__.py  scraper_script.py  thumbnail_debug.py  topic_cluster_backfill.py  topic_cluster_debug.py  transcript_backfill_script.py  transcript_fetcher_script.py
tests/: test_performance.py  test_scraper_service.py  test_supabase_instrumentation.py  test_thumbnail_features.py  test_thumbnail_test_script.py  test_title_features.py  test_transcript_backfill.py  test_transcript_cli.py  test_transcript_features.py
(+17 files in other folders)
