[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-insights"
version = "0.1.0"
description = "YouTube channel scraping and performance analytics pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "easyocr>=1.7,<2",
  "numpy>=2.0,<3",
  "opencv-python-headless>=4.10,<5",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
yt-insights = "yt_insights.cli:main"
yt-thumbnail-debug = "yt_insights.tools.thumbnail_debug:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
